base/default/adapter-attendant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adapter-attendant
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adapter-attendant
  template:
    metadata:
      labels:
        app: adapter-attendant
        huemie-owner: core
    spec:
      containers:
        - name: adapter-attendant
          image: ghcr.io/kaese72/adapter-attendant:v0.0.18
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256M
            requests:
              cpu: 100m
              memory: 256M
          volumeMounts:
            - name: auth-pubkey
              mountPath: /etc/auth-pubkey
              readOnly: true
      volumes:
        - name: auth-pubkey
          secret:
            secretName: auth-rsa-public-key
            items:
              - key: public.pem
                path: public.pem
      serviceAccountName: adapter-attendant
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adapter-attendant
  annotations:
    argocd.argoproj.io/sync-wave: "60"
  name: adapter-attendant
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: adapter-attendant
status:
  loadBalancer: {}
