base/default/ittt-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittt-orchestrator
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ittt-orchestrator
  template:
    metadata:
      labels:
        app: ittt-orchestrator
        huemie-owner: core
    spec:
      containers:
        - name: ittt-orchestrator
          image: ghcr.io/kaese72/ittt-orchestrator:v0.0.1
          args: ["api"]
          volumeMounts:
            - name: auth-pubkey
              mountPath: /etc/auth-pubkey
              readOnly: true
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128M
            requests:
              cpu: 100m
              memory: 128M
      volumes:
        - name: auth-pubkey
          secret:
            secretName: auth-rsa-public-key
            items:
              - key: public.pem
                path: public.pem
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittt-orchestrator-rule-state
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ittt-orchestrator-rule-state
  template:
    metadata:
      labels:
        app: ittt-orchestrator-rule-state
        huemie-owner: core
    spec:
      containers:
        - name: ittt-orchestrator-rule-state
          image: ghcr.io/kaese72/ittt-orchestrator:v0.0.1
          args: ["rule-state"]
          resources:
            limits:
              cpu: 250m
              memory: 128M
            requests:
              cpu: 100m
              memory: 128M
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ittt-orchestrator
  annotations:
    argocd.argoproj.io/sync-wave: "60"
  name: ittt-orchestrator
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ittt-orchestrator
status:
  loadBalancer: {}
