base/default/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: huemie-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "70"
spec:
  rules:
    - host: app.huemie.space
      http:
        paths: &shared_paths
          - path: /authentication-service
            pathType: Prefix
            backend:
              service:
                name: authentication
                port:
                  number: 8080
          - path: /device-store
            pathType: Prefix
            backend:
              service:
                name: device-store
                port:
                  number: 8080
          - path: /device-ingest
            pathType: Prefix
            backend:
              service:
                name: device-store
                port:
                  number: 8080
          - path: /ittt-orchestrator
            pathType: Prefix
            backend:
              service:
                name: ittt-orchestrator
                port:
                  number: 8080
          - path: /adapter-attendant
            pathType: Prefix
            backend:
              service:
                name: adapter-attendant
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: huemie-ui
                port:
                  number: 80
    - host: app.huemie.local
      http:
        paths: *shared_paths
