base/default/authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
        huemie-owner: core
        huemie.space/service-role: authentication
    spec:
      containers:
        - name: authentication
          image: ghcr.io/kaese72/authentication:v0.0.1
          volumeMounts:
            - name: rsa-key
              mountPath: /etc/authentication
              readOnly: true
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128M
            requests:
              cpu: 100m
              memory: 128M
      volumes:
        - name: rsa-key
          secret:
            secretName: auth-rsa-signing-key
            items:
              - key: private.pem
                path: private.pem
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authentication
  annotations:
    argocd.argoproj.io/sync-wave: "60"
  name: authentication
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: authentication
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentication
  annotations:
    argocd.argoproj.io/sync-wave: "55"
spec:
  podSelector:
    matchLabels:
      huemie.space/service-role: authentication
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              huemie.space/service-role: mariadb
      ports:
        - port: 3306
